[package]
name = "iconwriter"
version = "1.2.0-beta"
authors = ["Warren Galyen <warrengalyen@users.noreply.github.com>"]
edition = "2018"
description = "A simple solution for generating .ico and .icns icons."
license = "MIT"
license-file = "LICENSE"
repository = "https://github.com/warrengalyen/iconwriter"
homepage = "https://github.com/warrengalyen/iconwriter"
readme = "README.md"
keywords = ["icon", "ico", "icns"]

[dependencies]
tar = "0.4.30"
png_encode_mini = "0.1.2"
nsvg = "0.5.1"
ico = "0.1.0"
icns = "0.3.1" 