[package]
name = "iconwriter"
version = "1.6.0"
authors = ["Warren Galyen <warrengalyen@users.noreply.github.com>"]
edition = "2018"
description = "A simple solution for encoding common icon file formats."
license-file = "LICENSE"
repository = "https://github.com/warrengalyen/iconwriter"
homepage = "https://github.com/warrengalyen/iconwriter"
readme = "README.md"
keywords = ["icon", "ico", "icns"]

[dependencies]
tar = "0.4.30"
ico = "0.1.0"
icns = "0.3.1"
image = "0.22.5"
resvg = { version = "0.6.1", features = ["cairo-backend"] } 